<resources>
    <string name="app_name">PrimeraTarea</string>

    <string name="textoCabecera">Calculadora de números primos:</string>

    <string name="textoIntermedio">Introduce qué número primo quieres calcular. Por ejemplo, si deseas saber el sexto número primo, pon el número 6 y dale a calcular. Te dirá que el sexto número primo es el 11</string>

    <string name="textoPosicion">Posición:</string>

    <string name="textoResultado"/>

    <string name="textoBoton">Calcular!</string>
</resources>
