<?xml version="1.0" encoding="UTF-8"?>

    <android.support.constraint.ConstraintLayout
    tools:context="com.nacho.tarea01.MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <TextView
        android:id="@+id/cabecera"
        android:layout_width="359dp"
        android:layout_height="82dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/textoCabecera"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="359dp"
        android:layout_height="173dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/textoIntermedio"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cabecera" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="75dp"
        android:layout_height="22dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/textoPosicion"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/numeroPosicion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:selectAllOnFocus="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2"

        android:imeOptions="actionGo"

        />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="355dp"
        android:layout_height="90dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textoResultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numeroPosicion"
        app:layout_constraintVertical_bias="0.882" />

    <Button
        android:id="@+id/botonCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="@string/textoBoton"
        app:layout_constraintBottom_toTopOf="@+id/resultado"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.411" />

</android.support.constraint.ConstraintLayout>
